css/main.css
html {
  background-color: #c9b5ab;
  line-height: 1.5;
}

body {
  background-color: #fff;
}


img {
  width: 100%;
}

h1 {
  font-family: "PT Sans", sans-serif;
  font-size: 1.5rem;
  font-weight: bold;
  color: #3f1622;
}

a,
a:link {
  font-family: "PT Sans", sans-serif;
  font-size: 1.125rem;
  font-weight: bold;
  color: #8f2440;
  text-decoration: none;
}

a:hover {
  color: #3f1622;
  text-decoration: underline;
}

ol {
  list-style: none;
}

main {
  font-family: "PT Serif", serif;
  font-size: 1.125rem;
  font-weight: normal;
}

figure {
  text-align: center;
  font-style: italic;
  font-size: .8rem;
}

blockquote {
  font-style: italic;
  font-size: 1.5rem;
}

cite {
  font-size: .8rem;
}

h2 {
  font-family: "PT Sans", sans-serif;
  color: #3f1622;
}

article {
  font-weight: bold;
}

dt {
  font-style: italic;
}

dd {
  font-weight: bold;
}

ul {
  list-style-type: lower-greek;
}

ul.circles {
  list-style-type: circle;
}

